force-app/main/default/objects/Levantamiento__c/Levantamiento__c.object-meta.xml
<CustomObject>
    <label>Levantamiento</label>
    <nameField>
        <label>Nombre de Levantamiento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Levantamientos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>