force-app/main/default/objects/Levantamiento__c/fields/Auditor_Asignado__c.field-meta.xml
<CustomField>
    <fullName>Auditor_Asignado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auditor Asignado</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Levantamientos</relationshipName>
    <type>Lookup</type>
</CustomField>