force-app/main/default/objects/Levantamiento__c/fields/Categorias_de_Abarrotes_Manejantes__c.field-meta.xml
<CustomField>
    <fullName>Categorias_de_Abarrotes_Manejantes__c</fullName>
    <label>Categorías de Abarrotes Manejantes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consomé</fullName>
            </value>
            <value>
                <fullName>Café soluble</fullName>
            </value>
            <value>
                <fullName>Jabón de tocador</fullName>
            </value>
            <value>
                <fullName>Detergentes</fullName>
            </value>
            <value>
                <fullName>Modificadores de leche</fullName>
            </value>
            <value>
                <fullName>Puré de tomate</fullName>
            </value>
            <value>
                <fullName>Jamón</fullName>
            </value>
            <value>
                <fullName>Margarina/Mantequilla</fullName>
            </value>
            <value>
                <fullName>Queso</fullName>
            </value>
            <value>
                <fullName>Yogurt</fullName>
            </value>
            <value>
                <fullName>Leche en polvo</fullName>
            </value>
            <value>
                <fullName>Pasta dental</fullName>
            </value>
            <value>
                <fullName>Shampoo</fullName>
            </value>
            <value>
                <fullName>Hojas de afeitar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>