force-app/main/default/objects/Levantamiento__c/fields/Categorias_de_Confiteria_Manejantes__c.field-meta.xml
<CustomField>
    <fullName>Categorias_de_Confiteria_Manejantes__c</fullName>
    <label>Categorías de Confitería Manejantes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pastelitos</fullName>
            </value>
            <value>
                <fullName>Cigarros</fullName>
            </value>
            <value>
                <fullName>Galletas</fullName>
            </value>
            <value>
                <fullName>Chocolate golosina</fullName>
            </value>
            <value>
                <fullName>Botanas</fullName>
            </value>
            <value>
                <fullName>Refrescos</fullName>
            </value>
            <value>
                <fullName>Ninguna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>