force-app/main/default/objects/Levantamiento__c/fields/Fecha_del_ticket__c.field-meta.xml
<CustomField>
    <fullName>Fecha_del_ticket__c</fullName>
    <description>Campo para almacenar la fecha del ticket</description>
    <label>Fecha del ticket</label>
    <type>Date</type>
</CustomField>