force-app/main/default/objects/Levantamiento__c/fields/Fin_del_Levantamiento__c.field-meta.xml
<CustomField>
    <fullName>Fin_del_Levantamiento__c</fullName>
    <label>Fin del Levantamiento</label>
    <type>DateTime</type>
</CustomField>