force-app/main/default/objects/Levantamiento__c/fields/Inicio_del_Levantamiento__c.field-meta.xml
<CustomField>
    <fullName>Inicio_del_Levantamiento__c</fullName>
    <label>Inicio del Levantamiento</label>
    <type>DateTime</type>
</CustomField>