force-app/main/default/objects/Levantamiento__c/fields/Longitud_Levantamiento__c.field-meta.xml
<CustomField>
    <fullName>Longitud_Levantamiento__c</fullName>
    <label>Longitud Levantamiento</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>