force-app/main/default/objects/Levantamiento__c/fields/Maneja_bebidas_alcoholicas__c.field-meta.xml
<CustomField>
    <fullName>Maneja_bebidas_alcoholicas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maneja bebidas alcoholicas</label>
    <type>Checkbox</type>
</CustomField>