force-app/main/default/objects/Levantamiento__c/fields/Motivo_de_no_levantamiento_de_tickets__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_no_levantamiento_de_tickets__c</fullName>
    <description>Campo que almacena el motivo por el cual el cliente no cuenta con tickets</description>
    <label>Motivo de no levantamiento de tickets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>El cliente no conserva el ticket</fullName>
            </value>
            <value>
                <fullName>Al proveedor no se le entrega el ticket</fullName>
            </value>
            <value>
                <fullName>Compra en lugares donde no entregan ticket (No compró con el proveedor)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>