force-app/main/default/objects/Levantamiento__c/fields/p50_ventas_en_bebidas_alcoholicas__c.field-meta.xml
<CustomField>
    <fullName>p50_ventas_en_bebidas_alcoholicas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>50% ventas en bebidas alcohólicas</label>
    <type>Checkbox</type>
</CustomField>