force-app/main/default/objects/Levantamiento__c/fields/Realizacion_del_Levantamiento__c.field-meta.xml
<CustomField>
    <fullName>Realizacion_del_Levantamiento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Realización del Levantamiento</label>
    <type>Checkbox</type>
</CustomField>