force-app/main/default/objects/Levantamiento__c/fields/Tipo_de_Levantamiento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Levantamiento__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Levantamiento</label>
    <type>Text</type>
</CustomField>