force-app/main/default/objects/Levantamiento__c/recordTypes/Inventario.recordType-meta.xml
<RecordType>
    <fullName>Inventario</fullName>
    <active>true</active>
    <label>Inventario</label>
</RecordType>