force-app/main/default/objects/Levantamiento__c/recordTypes/Perfil_Categorias.recordType-meta.xml
<RecordType>
    <fullName>Perfil_Categorias</fullName>
    <active>true</active>
    <label>Perfil Categorías</label>
</RecordType>